--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,9 @@ body {
 }
 
 h1 {
+  color:#ddd;
   font-size: 48px;
-  margin-bottom: 10px;
-}
-
-.image-row {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-img {
-  max-width: 20%;
-  height: auto;
-  margin: 10px;
+  margin-bottom: 20px;
 }
 
 .drum-container {
@@ -57,3 +43,20 @@ img {
   background-color: #ff9900;
   transform: scale(1.05);
 }
+
+body {
+  font-family: Arial, sans-serif;
+  background-image: url('IMG_0340.jpg'), url('seojunbear.jpg'); /* Specify the URL of your background image */
+  background-size: 50%, 50%; /* Adjust the size percentage as needed */
+  background-repeat: no-repeat, no-repeat; /* Prevent the image from repeating */
+  background-position: left, right;
+  margin: 0, 0;
+  padding: 0, 0;
+  display: flex, flex;
+  flex-direction: column, column;
+  align-items: center, center;
+  justify-content: center, center;
+  height: 100vh, 100vh;
+}
+
+
