--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,7 @@ h1 {
 
 body {
   font-family: Arial, sans-serif;
-  background-image: url('seojunrainbow.jpg'), url('seojunbear.jpg'), url('seojunpaint.jpg'), url('seojundrum.jpg');
-  /* Specify the URL of your background images */
-  background-size: 25% 25%, 25% 25%, 25% 25%, 25% 25%;
-  /* Adjust the size percentage as needed, separated by commas */
-  background-repeat: no-repeat;
-  /* Prevent the image from repeating */
-  background-position: top-left, bottom-left, top-right, bottom-right;
-  /* Position each image accordingly, separated by commas */
+  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
   display: flex;
@@ -61,7 +54,12 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background-image: 
+    url('seojunrainbow.jpg'), 
+    url('seojunbear.jpg'), 
+    url('seojunpaint.jpg'), 
+    url('seojundrum.jpg');
+  background-size: 25%, 25%, 25%, 25%;
+  background-repeat: no-repeat;
+  background-position: top left, bottom left, top right, bottom right;
 }
-
-
-
